# oversize-troika-hobo-leafy

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  main.py  requirements.txt
api/admin/: router.py  service.py
api/agent/: router.py  schema.py  service.py  tools.py
api/documents/pickle/: (221115 수정배포) (2022.10) 금융분야 마이데이터 기술 가이드라인.pickle  (수정게시) 금융분야 마이데이터 표준 API 규격 v1.pickle  테스트.pickle
api/prompt/: prompt.yml
api/test/admin/: test_admin_service.py
api/test/agent/: test_agent_service.py
api/test/util/: test_utils.py
api/util/: chain_builder.py  config.py  dependency.py  processor.py  splitter.py  utils.py
api/util/custom_wrapper/: asnyc_redis_saver.py  custom_bm25_retriever.py  custom_flashrank_rerank.py
client/: Dockerfile  app.py  requirements.txt
docker/pgvector/: init.sql
